[package]
name = "bee64"
version = "1.0.0"
edition = "2018"
authors = [ "gaetanww@proton.me" ]
description = "easily encodes and decodes standard base64"
repository = "https://github.com/gaetanww/bee64"
documentation = "https://docs.rs/bee64"
readme = "README.md"
keywords = ["base64"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
rust-version = "1.48.0"

[dependencies]
base64 = "0.21.7"